# rust-newsletter

./: .gitignore
.github/workflows/: main.yml
docker/: docker-compose.yml
zero2prod/: Cargo.toml
zero2prod/src/: lib.rs  main.rs  web.rs
zero2prod/src/web/: actix_impl.rs  actix_routes.rs  axum_impl.rs  axum_routes.rs
zero2prod/src/web/actix_routes/: health_check.rs  subscriptions.rs
zero2prod/src/web/axum_routes/: health_check.rs  subscriptions.rs
zero2prod/tests/: health_check.rs  subscriptions.rs
zero2prod/tests/common/: mod.rs
