[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[features]
actix = ["dep:actix-web"]
axum = ["dep:axum"]

default = ["actix"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
reqwest = "0.12.24"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

actix-web = { version = "4", optional = true }
axum = { version = "0.8.6", optional = true }
